Fix rare crash on edge of board
Add dummy cells to create an invisible edge that responds in the same way as the normal board for bounce calculations

--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ h1 {
   justify-content: center;
 }
 
+.board-cell.dummy-cell {
+  display: none;
+}
+
 .claimed-cell {
   background-color: #111;
 }
